first workign version

--- a/index.html
+++ b/index.html
@@ -1,2 +1,86 @@
-Hello world!
-test
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Violet Crown BBQ Showdown : Violet Crown Festival</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            body, html {
+            height: 100%;
+            margin: 0;
+            font: 400 15px/1.8 "Lato", sans-serif;
+            color: #777;
+            }
+
+            .header {
+                margin-top:30px;
+                position: relative;
+                color: #FFFFFF;
+                font: 36px "Garamond", sans-serif;
+            }
+
+            .bgimg-1, .bgimg-2, .bgimg-3 {
+            position: relative;
+            opacity: 0.65;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+
+            }
+            .bgimg-1 {
+            background-image: url("images/brisket.webp");
+            height: 100%;
+            }
+
+            .caption {
+            position: absolute;
+            left: 0;
+            top: 50%;
+            width: 100%;
+            text-align: center;
+            color: #000;
+            }
+
+            .caption span.border {
+            background-color: #111;
+            color: #fff;
+            padding: 18px;
+            font-size: 25px;
+            letter-spacing: 10px;
+            }
+
+            h3 {
+            letter-spacing: 5px;
+            text-transform: uppercase;
+            font: 20px "Lato", sans-serif;
+            color: #111;
+            }
+        </style>
+    </head>
+<body>
+
+<div class="bgimg-1">
+
+    <div class="header">
+       
+       
+        <div style="display: table-cell; vertical-align: middle;">
+            <img style="height:206px;width:232px;margin-left:50px;margin-top:25px" src="images/vcf_logo.png"/>
+            <span style="height:206px;vertical-align:middle;display:inline-block">Violet Crown BBQ Showdown</span>
+          </div>
+    </div>
+
+  <div class="caption">
+    <span class="border">Brentwoods First BBQ Competitive Cookoff!</span><br/>
+    <span class="border">Taste and vote for the best brisket</span><br/>
+    <span class="border">Saturday May 3 12-2PM</span><br/>
+    <span class="border"><a href="https://checkout.square.site/merchant/M63GA96VE2ZPG/checkout/NNO2A2PSY36WZUKFYIS7RFC6?src=webqr">Click for Tickets $15</a></span><br/
+  </div>
+
+  <div class="footer" style="margin-top:30px;color:white"><a alt="Sponsored by Stiles Switch BBQ"  href="https://stilesswitchbbq.com/"><img style="width:200px" 
+        alt="Sponsored by Stiles Switch BBQ" 
+        src="https://static.spotapps.co/web/stilesswitchbbq--com/custom/logo_new_2_white.png"/></a></div>
+</div>
+
+</body>
+</html>
